# SmartSnap

./: .env  LICENSE.txt  README.md  mobile_generation.yaml  pyproject.toml  run_ray.sh
scripts/: preprocess.tar
scripts/evaluation/: eval_llama3_8b_sft_validation.sh  eval_llama3_8b_validation.sh  eval_qwen2.5_7b_sft_validation.sh  eval_qwen2.5_7b_validation.sh  eval_qwen3-32b-sft_validation.sh  eval_qwen3-32b_validation.sh  eval_qwen3_8b_sft_validation.sh  eval_qwen3_8b_validation.sh
scripts/fine-tuning/: run_llama-8b_sft_android_original.sh  run_llama-8b_sft_android_ours.sh  run_qwen2-7b_sft_android_original.sh  run_qwen2-7b_sft_android_ours.sh  run_qwen3-32b_sft_android_original.sh  run_qwen3-32b_sft_android_ours.sh  run_qwen3-8b_sft_android_original.sh  run_qwen3-8b_sft_android_ours.sh
scripts/llama/: run_llama3-8b_grpo.sh
scripts/qwen2.5/: run_qwen2.5-7b_grpo.sh
scripts/qwen3/: run_qwen3-8b_grpo.sh
scripts/qwen3-32b/: run_qwen3-32b_grpo.sh
svagent/: __init__.py  advanced_docker_scheduler.py  docker_client_tione.py  docker_manager_factory.py  mobile_reward_fn.py  mobile_session.py  mobile_tool_agent_loop.py  reference_auto_test.py.bak
svagent/link/: __init__.py  connector.py  docker_utils.py  utils.py
svagent/page_executor/: __init__.py  text_executor.py  utils.py
svagent/recorder/: __init__.py  json_recorder.py
svagent/templates/: __init__.py  agent_prompt.py  packages.py  verifier_prompt.py
svagent/utils_mobile/: __init__.py  and_controller.py  control_tool.py.bak  control_tool_verl.py  utils.py  xml_tool.py
task/: bluecoins_1.yaml  map.yaml
task_train_verify/: bluecoins.yaml  calendar.yaml  cantook.yaml  clock.yaml  contacts.yaml  map.me.yaml  pi_music_player.yaml  settings.yaml
